# bob

./: Cargo.toml
debs/: bob_0.1.0_amd64.deb  bob_0.2.0_amd64.deb  bob_0.2.1_amd64.deb  bob_0.2.2_amd64.deb
src/: main.rs
