[package]
name = "bob"
version = "0.2.1"
authors = ["Stephan Goeppentin <dedda102@gmail.com>"]
edition = "2018"

[dependencies]
all_args_string = "0.1.0"
lazy_static = "1.3.0"
string_stupidify = "0.2.0"

[package.metadata.deb]
copyright = "2019, Stephan Goeppentin <dedda102@gmail.com>"
section = "utility"
